# pitch-trainer

./: build_keypoints.py  data.yaml  pyproject.toml  readme.md  requirements.txt  setup.cfg  test.py  train.py  utils.py
run/: app.py  command.md
run/soccer/: keypointer copy 2.py  keypointer copy 3.py  keypointer copy 4.py  keypointer copy.py  keypointer.py  pitch_tracker.py  recognizer.py  tracker.py
src/soccer_pitch/: __init__.py  config.py  pitchgeom.c  pitchgeom.pyx
src/soccer_pitch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
v10/: app.py  dg.json  requirements.txt
v10/soccer/: player_tracker.py  utils.py  video_loader.py
