[metadata]
name = soccer_pitch
version = 0.1.3
description = Fast soccer pitch geometry and keypoint utilities
python_requires = >=3.9

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy<2.3.0
    opencv-python-headless>=4.8
    tqdm>=4.0
    httpx
    transformers
zip_safe = False

[options.extras_require]
yolo =
    ultralytics
torch =
    torch
all =
    ultralytics
    torch
    tqdm>=4.0

[options.packages.find]
where = src
include = soccer_pitch*
exclude =
    v10*
    runs*
    for_verify*
    calibration*
    calib_dataset*
    data_generator*

[build_ext]
inplace = 0

[extension: soccer_pitch.pitchgeom]
sources =
    src/soccer_pitch/pitchgeom.pyx
language = c
extra_compile_args =
    -O3
    -ffast-math
    -fno-trapping-math
    -fno-math-errno
